--- a/portfolio.html
+++ b/portfolio.html
@@ -298,6 +298,34 @@ body {
   padding-bottom: 100px;
 }
 
+.white-background {
+  background-color: white;
+  font-family: 'Amatic SC';
+  font-size: 20px;
+  font-weight: 100;
+  text-align: ;
+  color: black;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 10px;
+  padding: 20px;
+  border-style: solid;
+  border-width: 1px;
+}
+
+/* image selector for white background graphics */
+
+img {
+  display: ;
+  float: left;
+  margin-bottom: ;
+  margin-left: 10%;
+  margin-right: 10%;
+  max-width: 10%;
+  padding: 0px;
+}
+
 /* intro welcome text */
 
 #welcome-section {
