--- a/portfolio.html
+++ b/portfolio.html
@@ -343,6 +343,35 @@ h4 {
   text-align: left;
 }
 
+/*id selector for Services Section*/
+.gray-background {
+  background-color: #F2F1F1;
+  font-family: 'Amatic SC';
+  font-size: 20px;
+  font-weight: 100;
+  text-align: ;
+  color: black;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 10px;
+  padding: 20px;
+  border-style: solid;
+  border-width: 1px;
+}
+
+/*id selector for Red Quote background */
+.red-background {
+  background-color: tomato;#FE0133;
+  padding: 0;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 10px;
+  border-style: solid;
+  border-width: .5px;
+}
+
 /* style for dream code reach icons */
 h5 {
   display: inline;
