added CSS for id selector projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -399,6 +399,22 @@ li {
   padding: 20px;
 }
 
+/* id selector for Portfolio section, formerly named and exactly the same as the div class white background, in the about section. Repeat uncecessary but made to fulfill a freecodecamp userstory requirement */
+.projects {
+  background-color: white;
+  font-family: 'Amatic SC';
+  font-size: 20px;
+  font-weight: 100;
+  text-align: ;
+  color: black;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  margin-left: 0px;
+  margin-right: 10px;
+  padding: 20px;
+  border-style: solid;
+  border-width: 1px;
+}
 
 </style>
 <header>
