--- a/portfolio.html
+++ b/portfolio.html
@@ -416,6 +416,21 @@ li {
   border-width: 1px;
 }
 
+/* responsive image gallery */
+
+div.gallery {
+  border: 1px solid #ccc;
+}
+
+div.gallery:hover {
+  border: 1px solid #777;
+}
+
+div.gallery img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
 </style>
 <header>
   <!--corner business name/logo-->
