corrected typos for icons in about section

--- a/portfolio.html
+++ b/portfolio.html
@@ -544,12 +544,12 @@ div.project-tile {
             <div>
               <h5 style="margin-left:11%"><b>DREAM</b></h5>
               <h5 style="margin-left:24%"><b>CODE</b></h5>
-              h5 style="margin-left:23%"><b>REACH</b></h5>
+              <h5 style="margin-left:23%"><b>REACH</b></h5>
             </div>
             <p style="float:center; margin-right:1%; margin-bottom: 0.5em;"><b></b><img src="https://res.cloudinary.com/yughug/image/upload/v1535679567/FCC/Portfolio%20Design%20Pics/ZigpLDO.png" style="width:50%" alt="dream icon"></p>
           </div>
           <div>
-            <p style="float:center; margin-right:1%; margin-bottom:0.5em;"><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679541/FCC/PorPortfolio%20Design%20Pics/iyKBSrG.png" alt="code icon"><b></b></p>
+            <p style="float:center; margin-right:1%; margin-bottom:0.5em;"><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679541/FCC/Portfolio%20Design%20Pics/iyKBSrG.png" alt="code icon"><b></b></p>
           </div>
           <div>
             <p style="float:center; font-family:Poiret One; color:tomato; text-align:center; margin-bottom; 0.5em; margin-left: 20px; margin-top: 0px; margin-right: 1%;"><img src="https://res.cloudinary.com/yughug/image/upload/v1535679563/FCC/Portfolio%20Design%20Pics/www.png" alt="www icon"><b></b></p>
@@ -557,7 +557,7 @@ div.project-tile {
           <p style="clear:both;">
       </div>
     </main>
-    
+
 <h1>
 </h1>
 </body>
