added div class for grey background

--- a/portfolio.html
+++ b/portfolio.html
@@ -557,7 +557,22 @@ div.project-tile {
           <p style="clear:both;">
       </div>
     </main>
+    <div class='gray-background'>
+      <a name="services"></a>
+      <h4> Services &#8595;</h4>
+      <hr>
+      <p style="float:center; margin-right:1%; margin-bottom:0.5em;"><b></b><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679559/FCC/Portfolio%20Design%20Pics/VsJSh0t.jpng" style= "width:50%" alt="html icon"></p>
 
+      <div>
+        <p style="float:center; margin-right:1%; margin-bottom:0.5em;"><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679528/FCC/Portfolio%20Design%20Pics/H6k1Y46.png" alt="css icon"><b></b></p>
+      </div>
+
+      <div>
+        <p style="float:center; font-family:Poiret One; color:tomato; text-align:center; margin-bottom: 0.5em; margin-left: 20px; margin-top: 0px; margin-right: 1%;"><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679554/FCC/Portfolio%20Design%20Pics/ViEtto0.png" alt="js icon"><b></b></p>
+      </div>
+      <p style="clear:both;">
+      </div>
+      <!--add python icon once you master it, insert evil laughter -->
 <h1>
 </h1>
 </body>
