added div class for red background

--- a/portfolio.html
+++ b/portfolio.html
@@ -573,6 +573,12 @@ div.project-tile {
       <p style="clear:both;">
       </div>
       <!--add python icon once you master it, insert evil laughter -->
+      <div class='red-background'>
+        <p id="maya">"If one is lucky, a solitary fantasy can totally transform one million realities."
+          <br> -Maya Angelou
+        </h2>
+      </div>
+      
 <h1>
 </h1>
 </body>
