Added div class gray background for Contact us section

--- a/portfolio.html
+++ b/portfolio.html
@@ -578,7 +578,11 @@ div.project-tile {
           <br> -Maya Angelou
         </h2>
       </div>
-      
+      <div class='gray-background'>
+        <a name="contact"></a>
+        <h4> Contact Us &#8595;</h4>
+        <hr>
+
 <h1>
 </h1>
 </body>
