Added buttons for contact section

--- a/portfolio.html
+++ b/portfolio.html
@@ -583,6 +583,15 @@ div.project-tile {
         <h4> Contact Us &#8595;</h4>
         <hr>
 
+        <div class="btn-group" style="width:100%">
+          <button style="width:25%" onclick="window.open('http://www.linkedin.com/in/jyugen', '_blank', 'resizable=yes')">LinkedIn</button>
+          <button style="width:25%" onclick="window.open('https://twitter.com/jasminjoh', '_blank', 'resizable=yes')">Twitter</button>
+          <button style="width:25%" id="profile-link" onclick="window.open('https://github.com/yughug', '_blank', 'resizable=yes')">GitHub</button>
+          <button style="width:25%" onclick="window.open('https://instagram.com/emberandsparks', '_blank', 'resizable=yes')">Instagram</button>
+        </div>
+      </div>
+
+      <!--Portfolio project section begins here-->
 <h1>
 </h1>
 </body>
