added projects class added responsive div for BGM added responsive div for portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -592,6 +592,29 @@ div.project-tile {
       </div>
 
       <!--Portfolio project section begins here-->
+      <div class='projects'>
+        <a name="portfolio"></a>
+        <h4> Portfolio &#8595;</h4>
+        <hr>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="https://codepen.io/YugHug/full/BKQzJZ/">
+              <img src="https://res.cloudinary.com/yughug/image/upload/v1535699893/FCC/Portfolio%20Design%20Pics/blackgirlmagic_website.png" alt="black girl magic website" width="240" height="150">
+            </a>
+            <div class="project-tile"> <b>Tribute: Black Girl Magic</b></div>
+          </div>
+        </div>
+
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="https://codepen.io?YugHug/full/qZRKox/">
+              <img src="https://res.cloudinary.com/yughug/image/upload/v1535680595/FCC/Portfolio%20Design%20Pics/Screen_Shot_2018-02-25_at_2.49.32_PM.png" alt="ember and sparks portfolio website" width="240" height="150">
+            </a>
+            <div class="project-tile"> <b>Portfolio</b></div>
+          </div>
+        </div>
+
+
 <h1>
 </h1>
 </body>
