added living single blog div

--- a/portfolio.html
+++ b/portfolio.html
@@ -614,7 +614,15 @@ div.project-tile {
           </div>
         </div>
 
-
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="img jpg here">
+              <img src="https://res.cloudinary.com/yughug/image/upload/v1535698385/FCC/Portfolio%20Design%20Pics/7F7PN5H.jpg" alt="living single blog" width="240" height="150">
+            </a>
+            <div class="project-tile"> <b>LIVING SINGLE BLOG</b>
+            </div>
+          </div>
+        </div>
 <h1>
 </h1>
 </body>
