added quote generator div

--- a/portfolio.html
+++ b/portfolio.html
@@ -632,6 +632,16 @@ div.project-tile {
             <div class="project-tile"> <b>MMMILKS APP</b></div>
           </div>
         </div>
+
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="img jpg here">
+              <img src="https://res.cloudinary.com/yughug/image/upload/v1535699366/FCC/Portfolio%20Design%20Pics/3ca66ad3f4412037f295088da4d1deff.jpg" alt="positive quote generator" width="240" height="150">
+            </a>
+            <div class="project-tile"> <b>HER Quote Generator</b>
+            </div>
+          </div>
+        </div>
         
 <h1>
 </h1>
