added div class for reality board app

--- a/portfolio.html
+++ b/portfolio.html
@@ -642,6 +642,16 @@ div.project-tile {
             </div>
           </div>
         </div>
+
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="img jpg here">
+              <img src="https://res.cloudinary.com/yughug/image/upload/v1535699086/FCC/Portfolio%20Design%20Pics/2a50c1f87dda550a12d7c198a63b763a.jpg" alt="vision board app" width="240" height="150">
+            </a>
+            <div class="project-tile"><b>REALITY BOARD</b></div>
+          </div>
+        </div>
+
         
 <h1>
 </h1>
