added div for designer app and community app

--- a/portfolio.html
+++ b/portfolio.html
@@ -652,9 +652,26 @@ div.project-tile {
           </div>
         </div>
 
-        
-<h1>
-</h1>
-</body>
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" href="img jpg here">
+              <img src="https://res.cloudinary.com/yughug/image/upload/v1535699312/FCC/Portfolio%20Design%20Pics/HOMESWEETHOME.png" alt="black girl magic website" width="240" height="150">
+            </a>
+            <div class="project-tile"><b>DE-SIGH-NER</b></div>
+          </div>
+        </div>
 
+        <div class="responsive">
+          <div class="gallery">
+            <a target="_blank" name="sparksfire" href="img jpg here">
+              <img src="https://res.cloudinary.com/yughug/image/upload/v1535699354/FCC/Portfolio%20Design%20Pics/5ca4604d6100b7f218dcaf79ce67efe0.jpg" alt="community program" width="240" height="150">
+            </a>
+            <div class="project-tile"><b>COMMUNITY PROGRAM</b>
+            </div>
+          </div>
+        </div>
+        <div class="clearfix"></div>
+      </div>
+
+</body>
 </html>
