--- a/portfolio.html
+++ b/portfolio.html
@@ -561,7 +561,7 @@ div.project-tile {
       <a name="services"></a>
       <h4> Services &#8595;</h4>
       <hr>
-      <p style="float:center; margin-right:1%; margin-bottom:0.5em;"><b></b><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679559/FCC/Portfolio%20Design%20Pics/VsJSh0t.jpg" style= "width:50%" alt="html icon"></p>
+      <p style="float:center; margin-right:1%; margin-bottom:0.5em;"><b></b><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679559/FCC/Portfolio%20Design%20Pics/VsJShOt.png" style= "width:50%" alt="html icon"></p>
 
       <div>
         <p style="float:center; margin-right:1%; margin-bottom:0.5em;"><img src= "https://res.cloudinary.com/yughug/image/upload/v1535679528/FCC/Portfolio%20Design%20Pics/H6k1Y46.png" alt="css icon"><b></b></p>
