corrected typo in header h1 id

--- a/portfolio.html
+++ b/portfolio.html
@@ -497,7 +497,7 @@ div.project-tile {
 </style>
 <header>
   <!--corner business name/logo-->
-<h1 id="ember-text">Embers<h1 id="and-text"><b>+</b><h1 id="sparks-text">Sparks<.h1>
+<h1 id="ember-text">Embers<h1 id="and-text"><b>+</b><h1 id="sparks-text">Sparks<h1>
 </header>
 <body>
 <header>
