--- a/portfolio.html
+++ b/portfolio.html
@@ -500,7 +500,7 @@ div.project-tile {
 <h1 id="ember-text">Embers<h1 id="and-text"><b>+</b><h1 id="sparks-text">Sparks<h1>
 </header>
 <body>
-<header>
+<head>
   <!--navigation bar-->
   <nav>
     <ul>
@@ -514,7 +514,7 @@ div.project-tile {
       </div>
     </ul>
   </nav>
-</header>
+</head>
 
 <!--background image of desk with photo of the continent-->
  <body style="background-image:url(https://res.cloudinary.com/yughug/image/upload/v1535677573/FCC/Portfolio%20Design%20Pics/darkdesk.png)">
