added font size to h3 welcome section

--- a/portfolio.html
+++ b/portfolio.html
@@ -330,6 +330,7 @@ img {
 
 #welcome-section {
   font-family: 'Amatic SC';
+  font-size: 60px;
   font-weight: lighter;
   text-align: center;
   margin-top: 250px;
