fixed typo in h3 welcome section

--- a/portfolio.html
+++ b/portfolio.html
@@ -519,7 +519,7 @@ div.project-tile {
 
 <!--background image of desk with photo of the continent-->
  <body style="background-image:url(https://res.cloudinary.com/yughug/image/upload/v1535677573/FCC/Portfolio%20Design%20Pics/darkdesk.png)">
-    h3 id="welcome-section">
+    <h3 id="welcome-section">
       <a name="home"></a>
       <p> Welcome to Embers + Sparks</p>
     </h3>
