--- a/portfolio.html
+++ b/portfolio.html
@@ -505,7 +505,7 @@ div.project-tile {
   <!--navigation bar-->
   <nav>
     <ul>
-      <div class="boxed spotted-box" id="navbar" style="font-family:Amatic SC;">
+      <div class="boxed spotted-box" style="font-family:Amatic SC;">
         <li><a class="active" href="#home">home</a></li>
         <li><a href="#aboutjayjo">about us</a></li>
         <li><a href="#services">services</a></li>
