changes to name id's to fix margins

--- a/portfolio.html
+++ b/portfolio.html
@@ -205,7 +205,7 @@ boxed controls nav background */
   margin-top: -5px;
   margin-bottom: 0px;
   margin-right: 0px;
-  margin-left: 400px;
+  margin-left: 450px;
   padding: 0px;
   background-color: #E6E1DE;
   position: fixed;
@@ -223,7 +223,7 @@ boxed controls nav background */
   font-family: 'Bad Script';
   font-size: 54px;
   margin-top: 0px;
-  margin-left: -109px;
+  margin-right: 40px;
   margin-bottom: 10px;
   padding: 8px 10px 11px 6px;
   background-color:  #E6E1DE;
@@ -238,7 +238,7 @@ boxed controls nav background */
   font-family: 'Amatic SC';
   font-size: 65px;
   margin-top: 0px;
-  margin-left: 45px;
+  margin-left: 125px;
   margin-bottom: 10px;
   padding: 0px 10px 6px 2px;
   background-color: #E6E1D1;
@@ -255,7 +255,7 @@ boxed controls nav background */
   font-size: 54px;
   margin-top: 0px;
   padding: 8px 10px 11px 2px;
-  margin-left: 83px;
+  margin-left: 163px;
   margin-bottom: 0px;
   background-color: #E6E1DE;
   position: fixed;
