--- a/portfolio.html
+++ b/portfolio.html
@@ -223,9 +223,9 @@ boxed controls nav background */
   font-family: 'Bad Script';
   font-size: 54px;
   margin-top: 0px;
-  margin-right: 40px;
+  margin-left: 9px;
   margin-bottom: 10px;
-  padding: 8px 10px 11px 6px;
+  padding: 8px 10px 11px 30px;
   background-color:  #E6E1DE;
   position: fixed;
   top: 0;
@@ -238,10 +238,10 @@ boxed controls nav background */
   font-family: 'Amatic SC';
   font-size: 65px;
   margin-top: 0px;
-  margin-left: 125px;
+  margin-left: 195px;
   margin-bottom: 10px;
-  padding: 0px 10px 6px 2px;
-  background-color: #E6E1D1;
+  padding: 20px 10px 23px 2px;
+  background-color: #E6E1DE;
   position: fixed;
   top: 0;
 }
@@ -255,7 +255,7 @@ boxed controls nav background */
   font-size: 54px;
   margin-top: 0px;
   padding: 8px 10px 11px 2px;
-  margin-left: 163px;
+  margin-left: 233px;
   margin-bottom: 0px;
   background-color: #E6E1DE;
   position: fixed;
