added CSS padding for class white background

--- a/portfolio.html
+++ b/portfolio.html
@@ -344,6 +344,13 @@ h4 {
   text-align: left;
 }
 
+/* class for font/paragraph position */
+
+p.a {
+  white-space: normal;
+  padding: 10px 80px 20px 40px;
+}
+
 /*id selector for Services Section*/
 .gray-background {
   background-color: #F2F1F1;
@@ -536,7 +543,7 @@ div.project-tile {
           <a name="aboutjayjo"></a>
           <h4> About Embers + Sparks &#8595;</h4>
           <hr>
-          <p align="center" padding="10px 20px 20px 10px" style="font-family:Raleway;"> My name is Jay Yugen. I am a web developer who loves problem-solving, research, analysis and all things tech. <br> I earned a Phd from the University of Illinois, Urbana-Champaign in Educational Policy, which is where I developed my love of research and data. During my time there, I learned how to translate ideas, into something concrete. And with web development, each of these interests align. <br>My passion is bringing concepts and ideas to life, no matter the area. <br><br>Allow my team to help you build your business. We specialize in providing business solutions that personalize your company and allow it to run more efficiently. We can create your professional forms, business cards, and help you learn how to capture useful data from your customers, to grow your business. And of course, we can create your website. We can help you flush out your ideas, and with research, <br> advise you on the next steps in achieving your goals. <br><br>Embers + Sparks belives in investing in our community, and we operate a community service organization <em> Embers + Sparks </em>. It's a passion project, which focuses on <br> empowering young men and women through socioemotional development, community building, and technology. We affirm and <br> empower during intentional social interations which focus on education and expression. Our program has <br>three levels: Embers, Sparks, and Fire--and all of our participants are leaders working to improve their communities <br>as they see fit. To learn more about our community involvement program <em>click here.</em></p>
+          <p align="left" class="a"  style="font-family:Raleway;"> My name is Jay Yugen. I am a web developer who loves problem-solving, research, analysis and all things tech.  I earned a Phd from the University of Illinois, Urbana-Champaign in Educational Policy, which is where I developed my love of research and data. During my time there, I learned how to translate ideas, into something concrete. And with web development, each of these interests align. My passion is bringing concepts and ideas to life, no matter the area. <br><br>Allow my team to help you build your business. We specialize in providing business solutions that personalize your company and allow it to run more efficiently. We can create your professional forms, business cards, and help you learn how to capture useful data from your customers, to grow your business. And of course, we can create your website. We can help you flush out your ideas, and with research, advise you on the next steps in achieving your goals. <br><br>Embers + Sparks belives in investing in our community, and we operate a community service organization <em> Embers + Sparks </em>. It's a passion project, which focuses on empowering young men and women through socioemotional development, community building, and technology. We affirm and empower during intentional social interations which focus on education and expression. Our program has three levels: Embers, Sparks, and Fire--and all of our participants are leaders working to improve their communities as they see fit. To learn more about our community involvement program <em>click here.</em></p>
           <br>
           <br>
           <!--icons at the end of about section begins here-->
