removed typo in gallery div to fix box sizing

--- a/portfolio.html
+++ b/portfolio.html
@@ -435,7 +435,7 @@ div.gallery:hover {
 
 div.gallery img {
   max-width: 100%;
-  max-height: 100%;
+  max-height: auto;
 }
 
 /* description div for under responsive images */
@@ -446,13 +446,13 @@ div.project-tile {
 }
 
 * {
-  box-sizing: border-border-box;
+  box-sizing: border-box;
 }
 
 .responsive {
   padding: 0 6px;
   float: left;
-  width: 24.75%
+  width: 24.99999%;
 }
 
 @media only screen and (max-width: 700px){
