changed text in portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -636,7 +636,7 @@ div.project-tile {
             <a target="_blank" href="img jpg here">
               <img src="https://res.cloudinary.com/yughug/image/upload/v1535699102/FCC/Portfolio%20Design%20Pics/971910b44c2e907217c7a63a884c191b.jpg" alt="CHOCOLATE MILK" width="240" height="150">
             </a>
-            <div class="project-tile"> <b>MMMILKS APP</b></div>
+            <div class="project-tile"> <b>RANDOM APP</b></div>
           </div>
         </div>
 
@@ -655,7 +655,7 @@ div.project-tile {
             <a target="_blank" href="img jpg here">
               <img src="https://res.cloudinary.com/yughug/image/upload/v1535699086/FCC/Portfolio%20Design%20Pics/2a50c1f87dda550a12d7c198a63b763a.jpg" alt="vision board app" width="240" height="150">
             </a>
-            <div class="project-tile"><b>REALITY BOARD</b></div>
+            <div class="project-tile"><b>REALITY BOARD APP</b></div>
           </div>
         </div>
 
