removed ember edits

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 <link href='https://fonts.googleapis.com/css?family=Loved by the King' rel='stylesheet'>
 
 <link href='https://fonts.googleapis.com/css?family=Megrim' rel='stylesheet'>
-</head>]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]
+</head>
 <header>
   <!--corner business name/logo-->
 <h1 id="ember-text">Embers<h1 id="and-text"><b>+</b><h1 id="sparks-text">Sparks<h1>
