commenting out h1 id. atom not working.

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--navigation bar-->
+  <link rel="stylesheet" type="text/css" href="portfolio.css">
+<meta charset="utf-8">
+<title>Jay Yugen Portfolio</title>
+<meta name="description" content="Jay Yugen Portfolio"
+
+<!--slightly shifts the navbar and logo name to the right. Should be able to remove this and shift with CSS when updating and cleaning code. Try to use the head feature update in html5
+<h1 id="head" style="text-align:left;" font-family="Montserrat">
+--->
+
+<!--navigation bar-->
   <nav>
     <ul>
       <div class="boxed spotted-box" style="font-family:Amatic SC;">
@@ -14,15 +23,6 @@
       </div>
     </ul>
   </nav>
-  
-<link rel="stylesheet" type="text/css" href="portfolio.css">
-<meta charset="utf-8">
-<title>Jay Yugen Portfolio</title>
-<meta name="description" content="Jay Yugen Portfolio"
-
-<!--slightly shifts the navbar and log name to the right. Should be able to remove this and shift with CSS when updating and cleaning code. Try to use the head feature update in html5-->
-<h1 id="head" style="text-align:left;" font-family="Montserrat">
-
 <!--fonts used listed below found on https://fonts.google.com-->
 
 <link href='https://fonts.googleapis.com/css?family=Bad Script' rel='stylesheet'>
